# vision_quickdemo

./: .gitignore  CMakeLists.txt  README.md
color_detecte/a/: .gitignore  CMakeLists.txt
color_detecte/a/logs/: INFO_20231128-122852.41727
color_detecte/a/script/: run.sh
color_detecte/a/src/: main.cpp
color_detecte/a/src/detector/include/detector/: detectcolor.h
color_detecte/a/src/detector/src/: detectcolor.cpp
script/: clear.sh  run.sh
src/: main.cpp
src/detector/include/detector/: detectcolor.h
src/detector/src/: detectcolor.cpp
src/google_logger/include/google_logger/: google_logger.h
src/google_logger/src/: google_logger.cpp
vscode/: CMakeLists.txt
vscode/script/: CMakeCache.txt  Makefile  build  cmake_install.cmake  myq  run.sh
vscode/src/: main.cpp  main.py
vscode/src/vision_demo/include/: quickdemo.h
vscode/src/vision_demo/src/: test_quick.cpp
